my-styles.css
/*
Kolory Animatu w przestrzeni RGBA
#9f2067ff fioletowy
#1b75bcff niebieski
#009444ff zielony
#ffde17ff żółty
#f15a29ff pomarańczowy
#ed1c24ff czerwony
*/

/*ładowanie */
.modal {
    display:    none;
    position:   fixed;
    z-index:    9999;
    top:        0;
    left:       0;
    height:     100%;
    width:      100%;
    background: rgba( 255, 255, 255, 1)
                50% 50%
                no-repeat;
}

html{
  min-height: 100%;
}

/* When the body has the loading class, we turn
   the scrollbar off with overflow:hidden */
body.loading {
    overflow: hidden;
}

/* Anytime the body has the loading class, our
   modal element will be visible */
body.loading .modal {
    display: block;
}

/*czcionka, body */
@font-face {
    font-family: TitilliumWeb;
    src: url(src/TitilliumWeb-Regular.ttf);
}
/*czcionka, menu */
@font-face {
  font-family: Ocra;
  src: url(src/ocraextended.ttf);
}

body{
  font-family: TitilliumWeb;
  color: white;
  overflow-x: hidden;
  -webkit-transition: all 0.3s ease;
  -moz-transition: all 0.3s ease;
  -o-transition: all 0.3s ease;
  transition: all 0.3s ease;
  margin-bottom: 50px;
}

.arrow-bot{
  color: white;
  position: absolute;
  left: 0;
  right: 20px;
  bottom:0;
  transform: rotate(90deg);
  margin: auto;
  z-index: 1000;
  animation-direction: alternate;
  animation-iteration-count: infinite;
  animation-duration: 3s;
  animation-name: pulseArrow;
}

@keyframes pulseArrow {
  0%{   width: 200px;}
  100%{ width: 100px;}

}

/* menu górne */
#menu{
  font-family: Ocra;
  background-color: #00000000;
  color: white;
  border-bottom: 1px solid white;
  margin-top: 0;
  padding-top: 10px;
  animation-duration: 0.5s;
  opacity: 1;
  display: none;
}

.navbar h3{
    margin-top: 30px;
}

@media (max-width: 920px) {
  .navbar h3{
      font-size: 20px;
      left: 0;
      right: 0;
      width: 50vw;
      margin: 30px 25vw 0 25vw;
  }
}

.textCon {
    position: relative;
    text-align: center;
    color: white;
}
.text {
    position: absolute;
    top: 58px;
    left: 12px;
}


.menuText{
  text-align: center;
  padding-bottom: 15px;
}

.active{
  animation-fill-mode: forwards;
  animation-duration: 1s;
  animation-name: Underline;
}
@keyframes Underline{
  from{ text-decoration: none;    }
  to{   text-decoration: underline;}
}

/* menu boczne */
.wraper{
  position: fixed;
  right: 0;
  z-index: 1000;
}

#sidebar {
        font-family: Ocra;
        padding-top: 10vh;
        min-width: 250px;
        max-width: 250px;
        margin-right: -240px;
        height: 100vh;
        animation-duration: 1s;
        animation-fill-mode: forwards;
        animation-name: toRight;
        display: none;
        z-index: 1000;
}

#sidebar:hover {
  animation-fill-mode: forwards;
  animation-name: toLeft;
}

@keyframes toLeft{
  from{ margin-right: -240px}
  to{   margin-right: 0}
}
@keyframes toRight{
  from{ margin-right: 0}
  to{   margin-right: -240px}
}


#sidebar img{
  margin-top: 50px;
}

#sidebar .textCon:hover img{
  animation-name: rotateHover;
  animation-fill-mode: forwards;
  animation-duration: 0.5s, 0.3s;
  display: inline;
}
#sidebar .textCon:hover > .text{
  animation-name: rotateHover, textSlide;
  animation-fill-mode: forwards;
  animation-duration: 0.5s, 0.3s;
  display: inline;
}
@keyframes rotateHover{
  from{ transform: rotate(0deg);}
  to  { transform: rotate(-6deg);}
}
@keyframes textSlide{
  from{ top: 58px;}
  to  { top: 68px;}
}

#myNavbar{
  display: none;
}

#mMenu{
  display: none;
  height: 120px;
  width: 100%;
  padding-top: 10px;
  margin: 0 0 0 0;
}

#mobMenu{
  text-align: center;
  display: none;
  padding-top: 5px;
  z-index: 1000;
}

a{
  color: #ffffff;
}
a:hover{
  color: #ffffffcc;
  text-decoration: none;
}
a:active{
  color: #ffffffcc;
  text-decoration: none;
}

.firstImg{
  width: 100%;
  margin-top: 110px;
  filter: blur(7px);
  z-index: 1;
  animation-delay: 2s;
  animation-duration: 1s;
  animation-fill-mode: forwards;
  animation-name: blurImg;
  position: relative;
}

@keyframes blurImg{
  from{ filter: blur(7px)}
  to  { filter: blur(0px)}
}

.avoidSidebar{
  position: relative;
  text-align: center;
  top: 0; bottom: 0; left: 0; right: 0;
  margin: auto 220px auto auto;
}

#onas h2{
  font-size: 36px;
}

.zdjeciezOpisem{
  min-height: 200px;
  height: auto;
  display: table;
  margin-bottom: 15px;
  margin-top: 15px;
  width: 90vw;
  padding: 10px 20px 10px 30px;
}

.zdjeciezOpisem img{
  border-radius: 50%;
  width: 200px;
  float: left;
}

.zdjeciezOpisem span{
  display: table-cell;
  vertical-align: middle;
  width: 70vw;
}

.zdjeciezOpisem h4, .zdjeciezOpisem h2{
  margin: 10px 0 0 15px;
  text-align: left;
}
.zdjeciezOpisem h2{
  margin-top: 0;
}

#uslugi h3{
  margin-top: 0;
  color: white;
  text-align: center;
}

#uslugi h2{
  margin-top: 0;
}

#uslugi span{
  display: inline-block;
  vertical-align: middle;
  line-height: normal;
}

#uslugi div:hover > span{
  animation-name: spanBorder;
  animation-duration: .5s;
  animation-fill-mode: forwards;
  border-bottom: 0px solid white;

}

@keyframes spanBorder{
  from{ border-bottom-width: 0px;}
  to{ border-bottom-width: 2px;;}
}

#tresc{
  text-align: center;
  display: none;
}

#tresc h4{
  font-weight: bold;
}

#tresc h2, h3, h4{
  margin-top: 20px;
}

.minH330>div{
  height: 30vh;
  border: 1px solid white;
  padding-top: 30px;
}

#tresc li, #kontakt li{
  line-height: 200%;
  width: 30vw;
  list-style-type:none;
  background-image:url(src/kolkoAnimatu.png);
  background-repeat: no-repeat;
  background-size: 25px;
  background-position: left;
  left: 0;
  right: 0;
  margin: 10px auto;
  padding-left: 25px;
}

#kontakt li{
  width: 300px !important;
}

#tresc li p{
  line-height: normal;
  text-align: left;
  padding-left: 25px;
}

#urodziny, #wesela, #szkoly, #hotele{
  display: none;
}

.priceTabWesela{
  height: 80px;
  border: 1px solid white;
  padding-left: 5px;
  text-align: center;
}

.iconUro{
  height: 80%;
  min-width: 130px;
}
.znikajacyTekst{
  display: none;
  margin-top: 30px;
}
.znikajacyTekst h4{
  line-height:200%;
}

.ofertaSzkoly>div{
  border: 1px solid white;
}

.calcH li, .mobileOfertaSzkoly li{
  width: inherit !important;
  padding-left: 40px;
  padding-right: 15px;
  left: 0 !important;
}

.calcH ul, .mobileOfertaSzkoly ul{
  padding-left: 0;
}

.mobileOfertaSzkoly{
  height: auto !important;
}

#targetH, .calcH{
  height: auto !important;
  min-height: 350px !important;
}

#dzieciMenu{
  cursor: pointer;
}

.slider{
  width: 80vw;
  left: 0;
  right: 0;
  margin: 20px auto 50px auto;
}

.slider img{
  width: 60vw;
  border-radius: 10%;
  position: relative;
  left: 0;
  right: 0;
  margin: 0 auto;
}

@media (min-width: 768px){
  #uro{
    height: 99.9vh;
    border: 3px dashed white;
    border-right: none;
  }

  #uro h2{
    margin-bottom: 100px;
  }

  #wes{
    height: 33.3vh;
    border: 3px dashed white;

  }

  #szk{
    height: 33.3vh;
    border-left: 3px dashed white;
    border-right: 3px dashed white;

  }

  #hot{
    height: 33.3vh;
    border: 3px dashed white;

  }

  #dzieciMenu img{
    max-height: 70%; max-width: 80%;
  }
}

@media(max-width: 767px){
  #uro{
    height: 25vh;
    border: 3px dashed white;
  }

  #szk, #wes{
    height: 25vh;
    border: 3px dashed white;
    border-top: none;
  }

  #hot{
    height: 25vh;
    border: 3px dashed white;
    border-top: none;
  }

  #dzieciMenu img{
    max-height: 50%; max-width: 80%;
  }

  .priceTabWesela{
    font-size: 80%;
  }
}

#dorosli img, #eventy img{
  width: 40vw;
  animation-name: rotateWrench;
  animation-duration: 1.5s;
  animation-iteration-count: infinite;
  animation-direction: alternate;
  transform-origin: 80% 20%;
  display: none;
  position: relative;
  left: 0; right: 0;
  margin: 5vh auto;
}

@keyframes rotateWrench {
  from{ transform: rotate(0deg)}
  to  { transform: rotate(50deg)}
}

.contactForm{
  width: 70%;
  margin: 0 auto;
  padding-top: 20px;
  align-items:  center;
  position:  relative;
  left: 0;
  right: 0;
  margin: auto;
  width: 50vw;
}

.foot{
  height: auto;
  padding: 10px 0 10px 0;
  text-align: center;
  background-color: darkgrey;
  position: sticky;
  bottom: 0;
}

